# AWS_strands_agents_aws_mcp

./: .gitignore  README.md
myawsenv/: pyvenv.cfg
strands-agents/: .env.example  COGNITO_SETUP.md  DEBUG_MCP.md  EC2_DEPLOYMENT.md  MCP_SETUP.md  MEMORY_FEATURES.md  QUICKSTART.md  README.md  api.py  check_models.py  cognito_auth.py  custom_nova_llm.py  diagram_generator.py  docker-compose.yml  launch.py  main.py  mcp_diagram_client.py  memory_agent.py  memory_config.py  pyproject.toml  requirements.txt  setup.py  streamlit_auth.py  test.py  test_mcp_integration.py  test_mcp_tools.py
